2004-12-27  Yann Hodique  <Yann.Hodique@lifl.fr>

	* buttondock.cpp: plop
