@@ -1,0 +1,5 @@
+.moc
+Makefile
+semantic.cache
+src
+src.gch
