@@ -1,7 +1,7 @@
 /*
  *  File: launcher.cpp
  *  Created: Tuesday, December 28, 2004
- *  Time-stamp: <31/12/2004 12:04:07 Yann Hodique>
+ *  Time-stamp: <20/01/2005 20:50:26 Yann Hodique>
  *  Copyright: Yann Hodique
  *  Email: Yann.Hodique@lifl.fr
  */
@@ -17,13 +17,22 @@
 
 #include "launcher.h"
 #include "dispatcher.h"
+#include "mtpsocket.h"
 
 void Launcher::init() {
+    MtpSocket * s = new MtpSocket(this);
+    s->setHost("localhost");
+    s->setPort(5000);
+    s->setLogin("plop");
+    s->setPasswd("plop");
+
     MtpProtocol * mp = new MtpProtocol(this);
-    mp->setHost("localhost");
-    mp->setPort(5000);
-    mp->setLogin("plop");
-    mp->setPasswd("plop");
+    mp->installIO(s);
+
+    connect(mp, SIGNAL(loginQuery()),
+            s, SLOT(sendLogin()));
+    connect(mp, SIGNAL(passwdQuery()),
+            s, SLOT(sendPasswd()));
 
     d = new Dispatcher(mp,this);
 
@@ -34,11 +43,11 @@ void Launcher::init() {
         if(ft) {
             ft->addTab(ed,"plip");
             d->addInteractionArea(ed);
-//            MtpArea *ed2 = new MtpArea;
-//            ft->addTab(ed2,"plop");
-//            d->addInteractionArea(ed2);
+           MtpArea *ed2 = new MtpArea;
+           ft->addTab(ed2,"plop");
+           d->addInteractionArea(ed2);
         }
     }
 
-    mp->connectToHost();
+    s->connectToHost();
 }
