@@ -10,12 +10,13 @@ QMAKE_CXXFLAGS_RELEASE += -ansi -Wall -O0 -g3 -Wno-long-long -Werror
 
 HEADERS += dispatcher.h launcher.h mtpprotocol.h floatingtab.h floatingtabbar.h	\
 	   mainwindow.h interactionarea.h mtpinput.h mtpoutput.h mtparea.h	\
-	   mtpbrowser.h mtpedit.h mtpinfo.h mode.h fontlock.h keymap.h scm.h
+	   mtpbrowser.h mtpedit.h mtpinfo.h mode.h fontlock.h keymap.h scm.h	\
+	   mtpsocket.h
 
 SOURCES += dispatcher.cpp launcher.cpp mtpprotocol.cpp floatingtab.cpp		\
 	   floatingtabbar.cpp mainwindow.cpp main.cpp interactionarea.cpp	\
 	   mtparea.cpp mtpbrowser.cpp mtpedit.cpp mtpinfo.cpp mode.cpp		\
-	   fontlock.cpp keymap.cpp scm.cpp
+	   fontlock.cpp keymap.cpp scm.cpp mtpsocket.cpp
 
 PRECOMPILED_HEADER = all.h
 
