@@ -1,0 +1,3 @@
+.moc
+Makefile
+main_wrap.cxx
